ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: myingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
      - host: a7d50ea86c41f4602906315da2d24a75-1308239132.us-west-2.elb.amazonaws.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: oragebitdemo-prasad-oragne-bit-demo
                  port:
                    number: 80
              path: /demo3/main
